# Wiki-Faces-Downloader

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: downloader.py  utilities.py
wiki_faces_downloader/: downloader.py
wikifaces/: downloader.py  utilities.py
